# hamonikr-security-tool

./: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure~
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
common/: Makefile.am  Makefile.in  common.c  common.h  hamonikr-systemd-control-helper.c
data/: Makefile.am  Makefile.in  kr.hamonikr.security.tool.policy.in.in  style.css
data/polkit-1/actions/: kr.hamonikr.security.utils.policy
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  gooroom-security-status-tools.pkla  hamonikr-security-tool.install  hamonikr-security-tool.pkla  rules
po/: POTFILES  POTFILES.in  en_GB.po  ko.po
src/: Makefile.am  Makefile.in  apps.hamonikr-security-tool.gschema.xml  gooroom-security-status-tool.desktop.in  gresource.xml  hamonikr-security-tool.desktop.in  logfilter-popover.c  main.c  rpd-dialog.c  sysinfo-window.c  sysinfo-window.ui
utils/: Makefile.am  default-log.conf  gsl_util.py  hamonikr-security-logparser.py  test_security_status.py  translation
